# scara

./: .gitignore  README.md  absolute_encoder.ipynb  environment.yml  license.txt  requirements.txt  setup-environment.sh
angular_sensor_all/: angular_sensor_all.ino
camera/: calibration.py
controller/: controller.ino
microcontroller/: build.sh  jointdevice.py  monitor.sh  push.sh
microcontroller/absolute_encoder/: absolute_encoder.ino
microcontroller/joints/: scararobot.py
microcontroller/libs/: homer.hpp  homer_builder.hpp  homing_state.hpp  linear_homer.cpp  linear_homer.hpp  rotary_controller.cpp  rotary_controller.hpp  rotary_homer.cpp  rotary_homer.hpp  rotary_stepper.cpp  rotary_stepper.hpp  servo_controller.cpp  servo_controller.hpp  shared_data.hpp
microcontroller/modular_controller/: modular_controller.ino
microcontroller/protocol/: CMakeLists.txt  build.sh  home.py  tests.cpp  tests.py
microcontroller/protocol/cpp/: actuator_type.hpp  protocol.cpp  protocol.hpp
microcontroller/protocol/python/: protocol.cpp  protocol_classes.cpp
modular_controller/: CMakeLists.txt  modular_controller.ino  rotary_homer.cpp  rotary_homer.hpp  rotary_stepper.cpp  rotary_stepper.hpp
modular_controller/protocol/: CMakeLists.txt  tests.cpp
modular_controller/protocol/cpp/: CMakeLists.txt  protocol.hpp
modular_controller/protocol/python/: protocol_classes.cpp
robotcom/: setup.py
robotcom/robotcom/: jointdevice.py  robot.py  robot_simulation.py  scararobot.py  servo.py
robotcontroller/: control.py  ik.py  setup.py  start.sh  test.sh
robotcontroller/robotcontroller/: controller.py  ik.py  ikcontroller.py  kinematics.py  legacy_controller.py  request-server.py
server/: app.py  arduino_connector.py  camera.py  controller.profile  controller.py  kinematics.py  start.sh  tracker_orientation.py
server/arduino/: arduino.ino
server/ga/: ConformalGeometricAlgebra.py
server/static/: main.js  style.css
server/templates/: index.html
stepper_test/: stepper_test.ino
wheel/mobile/: mobile.ino
